min-height to submenu title fix on small laptops

--- a/less/tilesmenu.less
+++ b/less/tilesmenu.less
@@ -80,12 +80,13 @@
 				}
 
 				.submenu-title {
-					bottom: inherit !important;
+				    bottom: inherit !important;
 				    position: relative;
 				    display: flex;
 				    align-items: center;
 				    width: 100%;
 				    height: 12vh;
+				    min-height: 180px;
 				    overflow-x: hidden;
 				    overflow-y: auto;
 				}
